--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "react-bootstrap-icons": "^1.1.0",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.9.0",
-    "react-toastify": "^6.0.8"
+    "react-toastify": "^6.0.8",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
